# File_Manage

./: .gitignore  CMakeLists.txt  server.crt  server.key
chunker_service/: CMakeLists.txt
chunker_service/src/: chunker.cpp  chunker.h  main.cpp  server.cpp  server.h
src/: file_manager.cpp  file_manager.h  main.cpp  server.cpp  server.h
store_service/: CMakeLists.txt
store_service/src/: main.cpp  server.cpp  server.h  store.cpp  store.h
